examples/test/testpolicy8782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8782
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value41
          key7: value39
          key36: value38
      podSelector:
        matchLabels:
          key9: value3
          key11: value45
